--- a/simple_css/css/style.css
+++ b/simple_css/css/style.css
@@ -57,19 +57,19 @@ div {
     background-color: #FFFF00;
     text-align: right;
     margin-left: 50px;
-    border-bottom: 2px solid #000000;
-    border-left: 5px solid #000000;
+    border-bottom: 2px solid #ffffff;
+    border-left: 5px solid #ffffff;
     color: #707070;
 }
 .green {
     background-color: #008500;
     text-align: left;
     margin-right: 50px;
-    border-top: 2px solid #000000;
-    border-right: 5px solid #000000;
+    border-top: 2px solid #ffffff;
+    border-right: 5px solid #ffffff;
 }
 footer {
-    border: 20px solid #ffffff;
+    border: 5px solid #ffffff;
 }
 footer p {
     font-size: 20px;
