fixed bird folder issues

--- a/birds_main/css/style.css
+++ b/birds_main/css/style.css
@@ -26,6 +26,7 @@ td {
     border-top-width: 0px;
     border-right-width: 0px;
     border-left-width: 0px;
+    border-bottom-width: 2px;
     padding: 10px;
 }
 thead th {
